동의서 수정

--- a/index.html
+++ b/index.html
@@ -18,9 +18,24 @@
             <div class="tab-page page-initial" data-state="1" data-evaluator="evaluatorFunc">
                 <h3 class="tab-title">개인정보 수집 및 이용 동의</h3>
                 <p class="terms">
-                    1) 개인정보의 수집·이용 목적 : 포괄적 동의합니다.<br/>
-                    2) 수집하는 개인정보의 항목: 이름, 생년월일<br/>
-                    3) 개인정보의 보유·이용 기간 : 2년간 보관후 폐기합니다.
+                    본 연구는 「여성건강증진을 위한 질분비물 AI 개발 연구」로, 질분비물의 이미지를 통해 질염, 성매개감염여부를 손쉽게 확인 가능하게 하여 산모 및 가임기 여성의 성건강 증진을 위해 AI 개발하고자 하는 위한 연구입니다. 연구책임자: 동국의대 산부인과 김희선(031.961.7350)
+                    <br />
+                    <br />
+                    □ 이미지 업로드 과정
+                    <br />
+                    질분비물 또는 질출혈이 증가하는 경우 사진을 찍어 본 웹에 업로드 -> 진료 병원 및 개인정보 입력 -> 진료 병원의 질분비물 균, 바이러스 검사 결과 확인 -> 질분비물 이미지와 검사결과 매칭 -> 1만원 상품권 발송
+                    <br />
+                    <br />
+                    □ 개인정보 보호
+                    <br />
+                    · 개인정보의 수집 이용 목적: 포괄적 동의합니다.
+                    <br />
+                    · 수집되는 임상정보에는 귀하의 나이(생년월일), 연락처, 진료받는 병원 정보, 월경력, 자궁경부암접종여부, 산모의 경우 산과력, 질분비물 검사 결과 등입니다. 수집된 임상 정보를 연구에 사용함에 있어서 귀하의 신원은 밝혀지지 않으며 비밀이 보장됩니다.
+                    <br />
+                    ․ 연구 종료 후에도 연구책임자의 책임하에 암호화된 파일로 3년간 안전하게 보관되며, 보관 기간이 초과되면 개인정보보호법에 의하여 즉시 폐기할 예정입니다.
+                    <br />
+                    <br />
+                    □ 본 연구의 자료는 AI 개발을 위해 통계작성 및 학술연구를 위해 제공됩니다.
                 </p>
                 <div class="terms-row">
                     <input type="checkbox" id="termschk" onClick={isCheckBoxClicked} required/>
