--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 <div class="col-1">
                     <div class="row-1">
                         <label for="name" class="form-label">이름</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력하세요." value="" required />
+                        <input type="text" class="form-control input-text" id="name" name="name" placeholder="이름을 입력하세요." value="" required />
                     </div>
                     <div class="invalid-feedback">필수입니다</div>
                 </div>
                 <div class="col-1">
                     <div class="row-1">
                         <label for="birthDay" class="form-label">생년월일</label>
-                        <input type="date" class="form-control" id="birthDay" name="birthDay" data-placeholder="날짜 선택" placeholder="1999-09-09" aria-required="true" required />
+                        <input type="date" class="form-control" id="birthDay" name="birthDay" data-placeholder="날짜 선택" required />
                     </div>
                     <div class="invalid-feedback">생년월일을 입력해주세요</div>
                 </div>
@@ -108,14 +108,14 @@
                     <div class="col-1">
                         <div class="row-1">
                             <label for="lastperiod" class="form-label">마지막 생리날짜</label>
-                            <input type="date" class="form-control" id="lastperiod" name="lastperiod" data-placeholder="날짜 선택" placeholder="1999-09-09" aria-required="true" required />
+                            <input type="date" class="form-control" id="lastperiod" name="lastperiod" data-placeholder="날짜 선택" required />
                         </div>
                         <div class="invalid-feedback">임신주수 모르면 마지막 생리날짜 선택</div>
                     </div>
                     <div class="col-1">
                         <div class="row-1">
                             <label for="duedate" class="form-label">출산예정일</label>
-                            <input type="date" class="form-control" id="duedate" name="duedate" data-placeholder="날짜 선택" placeholder="1999-09-09" aria-required="true" required />
+                            <input type="date" class="form-control" id="duedate" name="duedate" data-placeholder="날짜 선택" required />
                         </div>
                     </div>
                     <div class="row-2">
