--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>orot_ai</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
     <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js"></script>
 
