--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="col-1">
                         <div class="row-1">
-                            <label for="cycle" class="form-label">월경주기<span class="span">*</span></label>
+                            <label for="cycle" class="form-label">월경주기</label>
                             <select class="form-control form-select-lg" id="cycle" name="cycle" aria-label=".form-select-lg" required/>
                                 <option value="none" selected>주기 선택하기</option>
                                 <option value="30">21일 이하</option>
@@ -200,17 +200,38 @@
                             </select>
                         </div>
                     </div>
-                    <div class="row-3">
-                        <label class="form-label ">월경기간<span class="span">*</span></label>
+                    <div class="row-2">
+                        <label for="monthlyperiod" class="form-label ">월경기간</label>
                         <div class="radio-input-box">
                             <input class="form-check-input " type="radio" id="monthlyperiod01" name="monthlyperiod" value="2-8일" required/>
-                            <input class="form-check-input" type="radio" id="monthlyperiod02" name="monthlyperiod" value="월경 외 출혈이 있다" />
-                            <div class="radio-label-box">
+                            <input class="form-check-input" type="radio" id="monthlyperiod02" name="monthlyperiod" value="그외" />
+                            <div class="row-radio-label-box">
                                 <label class="form-check-label  monthlyperiod-check-label01 " for="monthlyperiod01">2-8일</label>
-                                <label class="form-check-label monthlyperiod-check-label02" for="monthlyperiod02">월경 외 출혈이 있다</label>
+                                <label class="form-check-label monthlyperiod-check-label02" for="monthlyperiod02">그 외</label>
                             </div>
                         </div>
                     </div>
+                    <div class="row-2">
+                        <label for="otherbleeding" class="form-label ">월경 외 출혈</label>
+                        <div class="radio-input-box">
+                            <input class="form-check-input " type="radio" id="otherbleeding01" name="otherbleeding" value="있다" required/>
+                            <input class="form-check-input" type="radio" id="otherbleeding02" name="otherbleeding" value="없다" />
+                            <div class="row-radio-label-box">
+                                <label class="form-check-label  otherbleeding-check-label01 " for="otherbleeding01">있다</label>
+                                <label class="form-check-label otherbleeding-check-label02" for="otherbleeding02">없다</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="row-1">
+                            <label for="lastperiod2" class="form-label">마지막 생리날짜</label>
+                            <input type="date" class="form-control" id="lastperiod2" name="lastperiod2" data-placeholder="날짜 선택" required />
+                        </div>
+                        <div class="invalid-feedback">모르면 아래 버튼 선택</div>
+                    </div>
+                    <input type="checkbox" id="lastperiod2chk" required/>
+                    <label class="form-check-label lastperiod2-check-label" for="lastperiod2chk">모름</label>
+
                     <div class="btn-box">
                         <button id="next-btn" type="button" class="next-btn btn page3-2check">다음</button>
                     </div> 
